Add navbar navigation

--- a/base/bodyStart.html
+++ b/base/bodyStart.html
@@ -9,27 +9,27 @@
     </div>
 
     <ul class="items">
-        <li class="selected">
+        <li id="navAbout">
+            <a href="index.php"><p>About</p></a>
             <div class="back"></div>
-            <p>About</p>
         </li>
-        <li>
+        <li id="navDiscography">
+            <a href="discography.php"><p>Discography</p></a>
             <div class="back"></div>
-            <p>Discography</p>
         </li>
-        <li>
+        <li id="navGear">
             <div class="back"></div>
             <p>Gear</p>
         </li>
-        <li>
+        <li id="navMedia">
             <div class="back"></div>
             <p>Media</p>
         </li>
-        <li>
+        <li id="navShows">
             <div class="back"></div>
             <p>Shows</p>
         </li>
-        <li>
+        <li id="navBranding">
             <div class="back"></div>
             <p>Branding</p>
         </li>
