Tweak credits page contents

--- a/menus/credits.html
+++ b/menus/credits.html
@@ -27,27 +27,27 @@
             </div>
             <div class="credit">
                 <h2>Charly CN</h2>
-                <p>Graphics Lead, Typography, Design</p>
+                <p>Graphics Lead, Contextual Typography, Design</p>
             </div>
             <div class="credit">
                 <h2>marcosvargas97</h2>
-                <p>Coloring, Typography</p>
+                <p>Coloring, General Typography</p>
             </div>
             <div class="credit">
                 <h2>Morris</h2>
-                <p>Member and Discography organisation</p>
+                <p>Discography research + detailing</p>
             </div>
             <div class="credit">
-                <h2>Michael</h2>
-                <p>Site tester, Researcher</p>
+                <h2>JoaJoGio</h2>
+                <p>Writer, Tester</p>
             </div>
             <div class="credit">
                 <h2>RM05</h2>
-                <p>Picture selection</p>
+                <p>Image categorization</p>
             </div>
             <div class="credit">
                 <h2>Lia</h2>
-                <p>Site tester</p>
+                <p>Tester</p>
             </div>
         </div>
 
