--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -20,15 +20,25 @@
             </div>
 
             <ul class="tabs">
+                <li class="tab"><p>Info</p></li>
                 <li class="tab selectedTab"><p>Tracks</p></li>
                 <li class="tab"><p>Physical Print</p></li>
                 <li class="tab"><p>Images</p></li>
-                <li class="tab"><p>Info</p></li>
             </ul>
+
+            <div class="gradient"></div>
         </div>
 
         <div class="albumCurrentTab">
+            <div class="loading-screen">
+                <p><b>Revvin' Up</b> the engines!</p>
+                <div class="spinning"></div>
+            </div>
 
+            <div class="tabPage tabInfo">
+            
+
+            </div>
         </div>
     </body>
 </html>
