Revamp album view design

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -10,10 +10,36 @@
         <link href="../css/site.css" rel="stylesheet">
         <link href="css/albumView.css" rel="stylesheet">
 
+        <script src="../js/loading-bar.js"></script>
         <script src="js/albumView.js"></script>
     </head>
     <body>
-        <div class="albumGeneral">
+        <ul class="stats block">
+            <li class="stat">
+                <p>ABC</p>
+            </li>
+            <li class="stat">
+                <p>DEF</p>
+            </li>
+            <li class="stat">
+                <p>GHI</p>
+            </li>
+        </ul>
+
+        <div class="tracks block">
+            <p>Album Tracklisting</p>
+        </div>
+
+        <div class="description block">
+            <p>Description</p>
+        </div>
+
+        <div class="physical block">
+            <p>Physical</p>
+        </div>
+
+        
+        <!--<div class="albumGeneral">
             <div class="description">
                 <h1>Album</h1>
                 <p>This is an album</p>
@@ -39,6 +65,6 @@
             
 
             </div>
-        </div>
+        </div>-->
     </body>
 </html>
