Improve "album view" general look

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -14,28 +14,34 @@
         <script src="js/albumView.js"></script>
     </head>
     <body>
-        <ul class="stats block">
-            <li class="stat">
-                <p>ABC</p>
-            </li>
-            <li class="stat">
-                <p>DEF</p>
-            </li>
-            <li class="stat">
-                <p>GHI</p>
-            </li>
-        </ul>
+        <div class="intro block">
+            <h1 class="title">Super Sonic Songs</h1>
+            <ul class="stats">
+                <li class="stat statYear">
+                    <p class="statTitle">Released</p>
+                    <p class="statVal">2003</p>
+                </li>
+                <li class="stat statTrackCount">
+                    <p class="statTitle">Tracks</p>
+                    <p class="statVal">23</p>
+                </li>
+                <li class="stat statLength">
+                    <p class="statTitle">Length</p>
+                    <p class="statVal">67:34</p>
+                </li>
+            </ul>
+        </div>
 
         <div class="tracks block">
-            <p>Album Tracklisting</p>
+            <h2 class="title">Tracks</h2>
         </div>
 
         <div class="description block">
-            <p>Description</p>
+            <h2>Description</h2>
         </div>
 
         <div class="physical block">
-            <p>Physical</p>
+            <h2>Physical</h2>
         </div>
 
         
