Update credits section

--- a/menus/credits.html
+++ b/menus/credits.html
@@ -23,15 +23,11 @@
         <div class="creditList">
             <div class="credit">
                 <h2>ABPerson</h2>
-                <p>Project Lead, Design + Lead Programmer</p>
+                <p>Project Lead, Lead Programmer, Design</p>
             </div>
             <div class="credit">
                 <h2>Charly CN</h2>
-                <p>Graphics Lead, Contextual Typography, Design</p>
-            </div>
-            <div class="credit">
-                <h2>marcosvargas97</h2>
-                <p>Coloring, General Typography</p>
+                <p>Graphics, Contextual Typography, Design</p>
             </div>
             <div class="credit">
                 <h2>Morris</h2>
@@ -40,6 +36,14 @@
             <div class="credit">
                 <h2>JoaJoGio</h2>
                 <p>Writer, Tester</p>
+            </div>
+            <div class="credit">
+                <h2>Redaissance</h2>
+                <p>Text Editor</p>
+            </div>
+            <div class="credit">
+                <h2>marcosvargas97</h2>
+                <p>Coloring, General Typography</p>
             </div>
             <div class="credit">
                 <h2>RM05</h2>
