Add "Tracks" section

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -34,6 +34,50 @@
 
         <div class="tracks block">
             <h2 class="title">Tracks</h2>
+            <ol class="trackList">
+                <li class="track">
+                    <div class="main">
+                        <h3 class="title">Fill It Up</h3>
+                        <p class="length">3:45</p>
+                    </div>
+                    <ul class="tags">
+                        <li class="tag tagReRelease"><p>Rerelease</p></li>
+                        <li class="tag tagRemix"><p>Remix</p></li>
+                        <li class="tag tagInstrumental"><p>Instrumental</p></li>
+                        <li class="tag tagOriginal"><p>Original</p></li>
+                        <li class="tag tagLive"><p>Live Performance</p></li>
+                        <li class="tag tagNotC40"><p>Not Crush 40</p></li>
+                    </ul>
+                </li>
+                <li class="track">
+                    <div class="main">
+                        <h3 class="title">What I'm Made Of</h3>
+                        <p class="length">5:23</p>
+                    </div>
+                    <ul class="tags">
+                        <li class="tag tagFirstRelease"><p>First Release</p></li>
+                    </ul>
+                    <p class="description">This is a description all about this track and its details - fascinating stuff!</p>
+                </li>
+                <li class="track">
+                    <div class="main">
+                        <h3 class="title">Live & Learn</h3>
+                        <p class="length">3:45</p>
+                    </div>
+                    <ul class="tags">
+                        <li class="tag tagFirstRelease"><p>First Release</p></li>
+                    </ul>
+                </li>
+                <li class="track">
+                    <div class="main">
+                        <h3 class="title">Knight Of The Wind</h3>
+                        <p class="length">2:37</p>
+                    </div>
+                    <ul class="tags">
+                        <li class="tag tagReRelease"><p>Re-release</p></li>
+                    </ul>
+                </li>
+            </ol>
         </div>
 
         <div class="description block">
