Add "Description" section

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -32,6 +32,11 @@
             </ul>
         </div>
 
+        <div class="description block">
+            <h2>Description</h2>
+            <p>This is a description about this amazing album - it's so amazing because of reason A, B and C. So yeah!</p>
+        </div>
+
         <div class="tracks block">
             <h2 class="title">Tracks</h2>
             <ol class="trackList">
@@ -78,10 +83,6 @@
                     </ul>
                 </li>
             </ol>
-        </div>
-
-        <div class="description block">
-            <h2>Description</h2>
         </div>
 
         <div class="physical block">
