Add horizontal mobile view

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -86,110 +86,113 @@
         </div>
 
         <div class="physical block">
-            <h2>Physical Media</h2>
+            <h2 class="title">Physical Media</h2>
 
-            <div class="cd">
-                <img class="cdImg" src="../img/content/discography/physical/SSS/CD.png">
-            </div>
+            <div class="content">
+                <div class="cd">
+                    <img class="cdImg" src="../img/content/discography/physical/SSS/CD.png">
+                </div>
 
-            <div class="coverings outerCoverings">
-                <div class="imgDetails imgDetailsLeft">
-                    <h3 class="title">Cover</h3>
-                    <img class="img coverImg" src="../img/content/discography/SuperSonicSongs.png">
-                    <div class="facts">
-                        <div class="fact">
-                            <img class="icon" src="../img/icons/background.svg">
-                            <h4 class="title">Background</h4>
-                            <p class="contents">From library 'XYZ'</p>
+                <div class="coverings outerCoverings">
+                    <div class="imgDetails imgDetailsLeft">
+                        <h3 class="title">Cover</h3>
+                        <img class="img coverImg" src="../img/content/discography/SuperSonicSongs.png">
+                        <div class="facts">
+                            <div class="fact">
+                                <img class="icon" src="../img/icons/background.svg">
+                                <h4 class="title">Background</h4>
+                                <p class="contents">From library 'XYZ'</p>
+                            </div>
+                            <div class="fact">
+                                <img class="icon" src="../img/icons/font.svg">
+                                <h4 class="title">Fonts</h4>
+                                <ul class="contents contentsList">
+                                    <li>Font A</li>
+                                    <li>Font B</li>
+                                    <li>Font C</li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="fact">
-                            <img class="icon" src="../img/icons/font.svg">
-                            <h4 class="title">Fonts</h4>
-                            <ul class="contents contentsList">
-                                <li>Font A</li>
-                                <li>Font B</li>
-                                <li>Font C</li>
-                            </ul>
+                    </div>
+                    <div class="imgDetails imgDetailsRight">
+                        <h3 class="title">Back</h3>
+                        <img class="img coverImg" src="../img/content/discography/physical/SSS/Back.jpg">
+                        <div class="facts">
+                            <div class="fact">
+                                <img class="icon" src="../img/icons/background.svg">
+                                <h4 class="title">Background</h4>
+                                <p class="contents">From library 'XYZ'</p>
+                            </div>
+                            <div class="fact">
+                                <img class="icon" src="../img/icons/font.svg">
+                                <h4 class="title">Fonts</h4>
+                                <ul class="contents contentsList">
+                                    <li>Font A</li>
+                                    <li>Font B</li>
+                                    <li>Font C</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="imgDetails imgDetailsRight">
-                    <h3 class="title">Back</h3>
-                    <img class="img coverImg" src="../img/content/discography/physical/SSS/Back.jpg">
-                    <div class="facts">
-                        <div class="fact">
-                            <img class="icon" src="../img/icons/background.svg">
-                            <h4 class="title">Background</h4>
-                            <p class="contents">From library 'XYZ'</p>
+
+                <div class="obi">
+                    <div class="info">
+                        <h3 class="title">Obi Strip</h3>
+                        <div class="translations">
+                            <div class="translation">
+                                <h4>Right</h4>
+                                <p>Some text to pad this section out!</p>
+                                <p>Some text to pad this section out!</p>
+                                <p>Some text to pad this section out!</p>
+                                <p>Some text to pad this section out!</p>
+                                <p>Some text to pad this section out!</p>
+                                <p>Some text to pad this section out!</p>
+                            </div>
+                            <div class="translation">
+                                <h4>Middle</h4>
+                                <p>Some more text to pad this section out!</p>
+                            </div>
+                            <div class="translation">
+                                <h4>Left</h4>
+                                <p>Even more text to pad this section out!</p>
+                            </div>
                         </div>
-                        <div class="fact">
-                            <img class="icon" src="../img/icons/font.svg">
-                            <h4 class="title">Fonts</h4>
-                            <ul class="contents contentsList">
-                                <li>Font A</li>
-                                <li>Font B</li>
-                                <li>Font C</li>
-                            </ul>
+                    </div>
+                    <img class="img" src="../img/content/discography/physical/SSS/Obi.png">
+                </div>
+
+                <div class="coverings tray">
+                    <div class="imgDetails imgDetailsRight">
+                        <h3 class="title">Tray</h3>
+                        <img class="img coverImg" src="../img/content/discography/physical/SSS/Tray.jpg">
+                        <div class="facts">
+                            <div class="fact">
+                                <img class="icon" src="../img/icons/background.svg">
+                                <h4 class="title">Background</h4>
+                                <p class="contents">From library 'XYZ'</p>
+                            </div>
+                            <div class="fact">
+                                <img class="icon" src="../img/icons/font.svg">
+                                <h4 class="title">Fonts</h4>
+                                <ul class="contents contentsList">
+                                    <li>Font A</li>
+                                    <li>Font B</li>
+                                    <li>Font C</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="obi">
-                <div class="info">
-                    <h3 class="title">Obi Strip</h3>
-                    <div class="translation">
-                        <h4>Right</h4>
-                        <p>Some text to pad this section out!</p>
-                        <p>Some text to pad this section out!</p>
-                        <p>Some text to pad this section out!</p>
-                        <p>Some text to pad this section out!</p>
-                        <p>Some text to pad this section out!</p>
-                        <p>Some text to pad this section out!</p>
+                <div class="booklet">
+                    <h3 class="title">Booklet</h3>
+                    
+                    <div class="explore">
+                        <button class="navLeft" title="Navigate Left"><img src="../img/icons/largeLeftArrow.svg" alt="Left Arrow"></button>
+                        <img class="img" src="../img/content/discography/SuperSonicSongs.png">
+                        <button class="navRight" title="Navigate Right"><img src="../img/icons/largeRightArrow.svg" alt="Right Arrow"></button>
                     </div>
-                    <div class="translation">
-                        <h4>Middle</h4>
-                        <p>Some more text to pad this section out!</p>
-                    </div>
-                    <div class="translation">
-                        <h4>Left</h4>
-                        <p>Even more text to pad this section out!</p>
-                    </div>
-                </div>
-                <img class="img" src="../img/content/discography/physical/SSS/Obi.png">
-            </div>
-
-            <div class="coverings tray">
-                <div class="imgDetails imgDetailsRight">
-                    <h3 class="title">Tray</h3>
-                    <img class="img coverImg" src="../img/content/discography/physical/SSS/Tray.jpg">
-                    <div class="facts">
-                        <div class="fact">
-                            <img class="icon" src="../img/icons/background.svg">
-                            <h4 class="title">Background</h4>
-                            <p class="contents">From library 'XYZ'</p>
-                        </div>
-                        <div class="fact">
-                            <img class="icon" src="../img/icons/font.svg">
-                            <h4 class="title">Fonts</h4>
-                            <ul class="contents contentsList">
-                                <li>Font A</li>
-                                <li>Font B</li>
-                                <li>Font C</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="booklet">
-                <h3 class="title">Booklet</h3>
-                <p>Read through the entire booklet right here! </p>
-
-                <div class="explore">
-                    <button class="navLeft" title="Navigate Left"><img src="../img/icons/largeLeftArrow.svg" alt="Left Arrow"></button>
-                    <img class="img coverImg" src="../img/content/discography/SuperSonicSongs.png">
-                    <button class="navRight" title="Navigate Right"><img src="../img/icons/largeRightArrow.svg" alt="Right Arrow"></button>
                 </div>
             </div>
         </div>
