Add "Obi" text population code

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -99,24 +99,30 @@
                         <div class="translations">
                             <div class="translation">
                                 <h4>Right</h4>
-                                <p>Some text to pad this section out!</p>
-                                <p>Some text to pad this section out!</p>
-                                <p>Some text to pad this section out!</p>
-                                <p>Some text to pad this section out!</p>
-                                <p>Some text to pad this section out!</p>
-                                <p>Some text to pad this section out!</p>
+                                <div id="obiRightText">
+                                    <p>Some text to pad this section out!</p>
+                                    <p>Some text to pad this section out!</p>
+                                    <p>Some text to pad this section out!</p>
+                                    <p>Some text to pad this section out!</p>
+                                    <p>Some text to pad this section out!</p>
+                                    <p>Some text to pad this section out!</p>
+                                </div>
                             </div>
                             <div class="translation">
                                 <h4>Middle</h4>
-                                <p>Some more text to pad this section out!</p>
+                                <div id="obiMiddleText">
+                                    <p>Some more text to pad this section out!</p>
+                                </div>
                             </div>
                             <div class="translation">
                                 <h4>Left</h4>
-                                <p>Even more text to pad this section out!</p>
+                                <div id="obiLeftText">
+                                    <p>Even more text to pad this section out!</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <img class="img" src="../img/content/discography/physical/SSS/Obi.png">
+                    <img class="img" id="obiImg" src="../img/content/discography/physical/SSS/Obi.png">
                 </div>
 
                 <div id="tray" class="coverings tray">
