Add booklet explore feature

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -133,15 +133,17 @@
                     </div>
                 </div>
 
-                <div id="booklet" class="booklet">
+                <div class="booklet">
                     <h3 class="title">Booklet</h3>
                     
                     <div class="explore">
-                        <button class="navLeft" title="Navigate Left"><img src="../img/icons/largeLeftArrow.svg" alt="Left Arrow"></button>
-                        <img class="img" src="../img/content/discography/SuperSonicSongs.png">
-                        <button class="navRight" title="Navigate Right"><img src="../img/icons/largeRightArrow.svg" alt="Right Arrow"></button>
+                        <button id="bookletNavLeft" class="navLeft" title="Navigate Left"><img src="../img/icons/largeLeftArrow.svg" alt="Left Arrow"></button>
+                        <div class="content" id="booklet">
+                            <img class="img" src="../img/content/discography/SuperSonicSongs.png">
+                            <div class="facts"></div>
+                        </div>
+                        <button id="bookletNavRight" class="navRight" title="Navigate Right"><img src="../img/icons/largeRightArrow.svg" alt="Right Arrow"></button>
                     </div>
-                    <div class="facts"></div>
                 </div>
             </div>
         </div>
